--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,16 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+3_developmental_relationships_files/figure-html/unnamed-chunk-10-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-11-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-12-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-13-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-14-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-16-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-4-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-5-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-6-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-7-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-8-1.png
+3_developmental_relationships_files/figure-html/unnamed-chunk-9-1.png
+.DS_Store
