updates to Peekbank language

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ rsconnect/
 3_developmental_relationships_files/figure-html/unnamed-chunk-8-1.png
 3_developmental_relationships_files/figure-html/unnamed-chunk-9-1.png
 .DS_Store
+paper/paper.pdf
+paper/paper.tex
+paper/paper_files/figure-latex/age_regression-1.pdf
+paper/paper_files/figure-latex/devchange-1.pdf
+paper/paper_files/figure-latex/growth-1.pdf
+paper/paper_files/figure-latex/longitudinal-1.pdf
+paper/paper_files/figure-latex/variance-1.pdf
+paper/paper.log
