add creel re-analysis to supplement

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ paper/paper_files/figure-latex/timecourse-1.pdf
 paper/supplemental_information_files/*
 paper/supplemental_information.tex
 paper/supplemental_information.pdf
+supplemental_data/creel_2024/allfamiliars.csv
+supplemental_data/creel_2024/allnovels.csv
